--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -128,9 +128,9 @@ textarea {
 .mdl-button--fab.mdl-button--colored {
     z-index: 10000;
 }
-.targetDiv {
-    display: none;
-}
+// .targetDiv {
+//     display: none;
+// }
 
 #top-btn {
     display: none;
